=============
Release 0.8.4
=============

* fix if no spikes are found on some electrodes
* fix as mean/median-pca methods were broken (albeit not used)
* fix to prevent a rare crash while loading too sparse overlaps
* fix a bug with the new dip method in python 2.7
* add the thresholding method to extract only MUA activity (requested by users)

=============
Release 0.8.3
=============

* automatic suppression, during meta merging, of noisy templates (for SpikeToolKit/Forest)
* during the phy export, we can automatically pre-assign labels to neurons
* fix a bug when converting to phy with dead channels
* fix a bug when converting to phy with file formats without data_offset
* speedup the estimation of the amplitude distribution
* minor fixes for clusters
* smoothing of the templates thanks to Savitzky-Golay filtering
* fix a bug when launching GUIs for file format without data offset
* can now work with scipy 1.3 and statsmodels 0.10
* isolation mode is improved, set as default and leading to better performance
* reducing overclustering with the Hartigan dip-test of unimodality
* can now set the number of dimensions for local PCA (10 by default)

=============
Release 0.8.2
=============

* add a docker file to build the software
* add support for shanks in phy 2.0
* add support for deconverting in the qt launcher
* do not create a Qt App if merging in auto mode
* waveforms are convolved with a Hanning window to boost PCA
* oversampling in now adapted as function of the sampling rate
* reduction of I/O while oversampling
* speed improvement with undersampling while cleaning the dictionary
* automation of the software for SpikeForest/SpikeToolkit benchmarks
* merging is now included in the default pipeline
* normalization of the metrics in the meta merging GUI

=============
Release 0.8.0
=============

* major improvement in the clustering. No more max_clusters parameters
* much faster clustering (thanks to Ruben Herzog)