@@ -7,6 +7,7 @@ Release 0.8.4
 * fix to prevent a rare crash while loading too sparse overlaps
 * fix a bug with the new dip method in python 2.7
 * add the thresholding method to extract only MUA activity (requested by users)
+* channel lists in probe files can be non sorted
 
 =============
 Release 0.8.3
